commit changes before branching

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                <!-- <div class="col-md-8" id="affdex_elements" style="width:680px;height:480px;"></div> -->
+                <div class="col-md-8" id="affdex_elements" style="width:680px;height:480px;"></div>
                 <div class="col-md-4">
                     <div style="height:25em;">
                         <strong>EMOTION TRACKING RESULTS</strong>
-                        <div id="results" style="word-wrap:break-word;"></div>
+                        <div id="results" style="word-wrap:break-word;" hidden></div>
                     </div>
                     <div>
                         <strong>DETECTOR LOG MSGS</strong>
