documentation + removing logs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="row btn__container">
                     <button id="start" onclick="onStart()" class="btn btn-success btn__template">Start</button>
                     <button id="stop" onclick="onStop()" class="btn btn-danger btn__template">Stop</button>
-                    <button id="reset" onclick="onReset()" class="btn btn-warning btn__template">Reset</button>
+                    <!-- <button id="reset" onclick="onReset()" class="btn btn-warning btn__template">Reset</button> -->
                 </div>
             </div>
         </div>
