adding main title for the users

--- a/client/index.html
+++ b/client/index.html
@@ -9,11 +9,16 @@
     <body>
         <div class="container-fluid main__container-fluid">
             <div class="main__container">
+                <div class="row">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-10 text-center main__container-title">
+                        Recognize your emotion, and subscribe in GameChangers!
+                    </div>
+                </div>
                 <div class="row main__sub-container">
                     <div class="col-md-7">
                         <div class="camera__frame" id="affdex_elements"></div>
                         <div class="row">
-                            <!-- <div class="col-md-2"></div> -->
                             <div class="col-md-11" id="results"></div>
                         </div>
                         <div class="row">
@@ -22,7 +27,6 @@
                                 <button id="start" onclick="onStart()" class="btn btn-success btn__template">Start</button>
                                 <button id="stop" onclick="onStop()" class="btn btn-danger btn__template">Stop</button>
                             </div>
-                            <!-- <button id="reset" onclick="onReset()" class="btn btn-warning btn__template">Reset</button> -->
                         </div>
                     </div>
                     <div class="col-md-5 img__container">
