--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link topnav" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link topnav" href="http://localhost:4400/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 </ul>
             </div>
