--- a/index.html
+++ b/index.html
@@ -9,17 +9,10 @@
     </head>
     <body onload="onStart()">
         <nav id="main_nav" class="navbar navbar-default navbar-expand-lg">
-            <a class="navbar-brand" href="#"><img style="width: 34px;" src="assets/images/Dell_Logo_Wht_rgb.png" alt="Image text"></a>
+            <a class="navbar-brand" href="http://localhost:4400"><img style="width: 34px;" src="assets/images/Dell_Logo_Wht_rgb.png" alt="Image text"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link topnav" href="http://localhost:4400/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                </ul>
-            </div>
         </nav>
         <div id="main" class="container">
 
